[package]
name = "stationboard"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
iced = { git = "https://github.com/iced-rs/iced/", branch = "master", features = ["tokio", "advanced", "wgpu"] }
iso8601 = "0.6.1"
reqwest = {version = "0.12.9", features = ["json"]}
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
